// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.link > render a basic link 1`] = `
.c0 {
  background-position: -10000% bottom;
  background-repeat: no-repeat;
  background-size: calc(100% - 1px) calc(0.1rem);
  color: rgb(5, 104, 174);
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  outline: none;
  text-decoration: none;
}

.c0:visited {
  color: rgb(5, 104, 174);
}

.c0:focus {
  background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
  background-position: left bottom;
  color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
  text-decoration: none;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    text-decoration: none;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    cursor: pointer;
    text-decoration: none;
  }
}

<a
  class="c0 link test-class"
  data-role="link"
  href="exampleHref"
  id="test-id"
  style="color: red;"
  tabindex="0"
>
  This is a link
</a>
`;

exports[`com.mgmtp.a12.widgets.link > render a link with icon 1`] = `
.c2 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c2 > span {
  display: inline-block;
}

.c2.c2 {
  max-width: unset;
}

.c0 {
  background-position: -10000% bottom;
  background-repeat: no-repeat;
  background-size: calc(100% - 1px) calc(0.1rem);
  color: rgb(5, 104, 174);
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  outline: none;
  text-decoration: none;
}

.c0 .c1 {
  color: inherit;
  display: inline;
  font-size: 0.75rem;
  margin: 0px 1px;
  vertical-align: -2px;
}

.c0:visited {
  color: rgb(5, 104, 174);
}

.c0:focus {
  background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
  background-position: left bottom;
  color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
  text-decoration: none;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    text-decoration: none;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    cursor: pointer;
    text-decoration: none;
  }
}

<a
  class="c0 link"
  data-role="link"
  href="#"
  tabindex="0"
  title="Test Title"
>
  <i
    class="c1 c2 plasma-icon"
    data-role="plasma-icon"
  >
    <span
      aria-hidden="true"
    >
      check_circle
    </span>
  </i>
   
  This is a link
</a>
`;

exports[`com.mgmtp.a12.widgets.link > render a mailto link 1`] = `
.c2 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c2 > span {
  display: inline-block;
}

.c2.c2 {
  max-width: unset;
}

.c0 {
  background-position: -10000% bottom;
  background-repeat: no-repeat;
  background-size: calc(100% - 1px) calc(0.1rem);
  color: rgb(5, 104, 174);
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  outline: none;
  text-decoration: none;
}

.c0 .c1 {
  color: inherit;
  display: inline;
  font-size: 0.75rem;
  margin: 0px 1px;
  vertical-align: -2px;
}

.c0:visited {
  color: rgb(5, 104, 174);
}

.c0:focus {
  background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
  background-position: left bottom;
  color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
  text-decoration: none;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    text-decoration: none;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    cursor: pointer;
    text-decoration: none;
  }
}

<a
  class="c0 link link--mailto"
  data-role="link"
  href="mailto:example@gmail.com"
  tabindex="0"
  title="E-mail"
>
  <i
    class="c1 c2 plasma-icon"
    data-role="plasma-icon"
  >
    <span
      aria-hidden="true"
    >
      email
    </span>
  </i>
  This is a link
</a>
`;

exports[`com.mgmtp.a12.widgets.link > render an external link 1`] = `
.c2 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c2 > span {
  display: inline-block;
}

.c2.c2 {
  max-width: unset;
}

.c0 {
  background-position: -10000% bottom;
  background-repeat: no-repeat;
  background-size: calc(100% - 1px) calc(0.1rem);
  color: rgb(5, 104, 174);
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  outline: none;
  text-decoration: none;
}

.c0 .c1 {
  color: inherit;
  display: inline;
  font-size: 0.75rem;
  margin: 0px 1px;
  vertical-align: -2px;
}

.c0:visited {
  color: rgb(5, 104, 174);
}

.c0:focus {
  background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
  background-position: left bottom;
  color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
  text-decoration: none;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-position: left bottom;
    transition: background-position 0.3s;
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    text-decoration: none;
  }
}

@media (pointer: fine) {
  .c0:hover {
    background-image: linear-gradient(rgb(213, 0, 117), rgb(213, 0, 117));
    color: rgb(213, 0, 117);
    cursor: pointer;
    text-decoration: none;
  }
}

<a
  class="c0 link link--external"
  data-role="link"
  href="exampleHref"
  tabindex="0"
  target="_blank"
  title="Leave Page"
>
  This is a link
  <i
    class="c1 c2 plasma-icon"
    data-role="plasma-icon"
  >
    <span
      aria-hidden="true"
    >
      open_in_new
    </span>
  </i>
</a>
`;
